refactor: 미사용 파라미터 제거